# chess-engine

./: .gitignore  .gitmodules
bridge/: .env  README.md  package-lock.json  package.json  tsconfig.json
bridge/src/: browser.ts  engine.ts  index.ts  utils.ts
engine/: CMakeLists.txt
engine/src/: bitboard.cpp  bitboard.h  book.cpp  book.h  evaluate.cpp  evaluate.h  history.cpp  history.h  main.cpp  movegen.cpp  movegen.h  nnue.cpp  nnue.h  position.cpp  position.h  search.cpp  search.h  syzygy.cpp  syzygy.h  thread.cpp  thread.h  timeman.cpp  timeman.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h
engine/tests/: perft.cpp  unit_tests.cpp
